Jumps of page below services tabs fixed

--- a/css/style.css
+++ b/css/style.css
@@ -842,6 +842,7 @@ body {
 
 .services-slider {
   margin-top: 71px;
+  min-height: 274px;
 }
 
 .services-slider > ul {
